--- a/Module1/Project/Rock_Paper_Scissor/main.html
+++ b/Module1/Project/Rock_Paper_Scissor/main.html
@@ -10,51 +10,60 @@
 <body>
     <main>
         <!-- TITLE -->
-        <div class="title-container">
-            <div id="title">
-                <p>ROCK</p>
-                <p>PAPER</p>
-                <p>SCISSORS</p>
-            </div>
-            <div class="score-cards">
-                <p id="score-cards-1">
-                    <span>COMPUTER </span>
-                    <span>SCORE</span>
-                    <span class="score computer-score">0</span>
-                </p>
-                <p id="score-cards-2">
-                    <span>YOUR</span>
-                    <span>SCORE</span>
-                    <span class="score your-score">0</span>
-                </p>
+        <div class="title">
+            <div class="title-container">
+                <div id="title">
+                    <p>ROCK</p>
+                    <p>PAPER</p>
+                    <p>SCISSORS</p>
+                </div>
+                <div class="score-cards">
+                    <p id="score-cards-1">
+                        <span>COMPUTER </span>
+                        <span>SCORE</span>
+                        <span class="score computer-score">0</span>
+                    </p>
+                    <p id="score-cards-2">
+                        <span>YOUR</span>
+                        <span>SCORE</span>
+                        <span class="score your-score">0</span>
+                    </p>
+                </div>
             </div>
         </div>
         <!-- ICON -->
-        <div class="icons-container">
-            <div class="icons-container-1">
-                <img id="stone" src="images/stone.png" alt="stone">
-                <img id="scissor" src="images/scissor.png" alt="scissor">
+        <div class="icons">
+            <div class="icons-container">
+                <div class="icons-container-1">
+                    <img id="stone" src="images/stone.png" alt="stone">
+                    <img id="scissor" src="images/scissor.png" alt="scissor">
+                </div>
+                <span class="line line-1"></span>
+                <span class="line line-2"></span>
+                <span class="line line-3"></span>
+                <img id="paper" src="images/paper.png" alt="paper">
             </div>
-            <span class="line line-1"></span>
-            <span class="line line-2"></span>
-            <span class="line line-3"></span>
-            <img id="paper" src="images/paper.png" alt="paper">
-    </div>
+        </div>
         <!-- RULES -->
-         <div class="rule-btn-container">
+        <div class="rule-btn-container">
             <button id="rule-btn">RULES</button>
-         </div>
-
-         <div class="rule-container">
+        </div>
+        <div class="rule-container">
             <h1 class="rule-title">Game Rules</h1>
             <div class="close-container"><img id="close-btn" src="images/close.png" alt="close"></div>
             <div class="rule-point">
-               <span>+</span> <p class="rule rule-1">Rock beats scissors, scissors beat paper, and paper beats rock.</p>
-               <span>+</span> <p class="rule rule-2"> Agree ahead of time whether you’ll count off “rock, paper, scissors, shoot” or just “rock, paper, scissors.”</p>
-               <span>+</span> <p class="rule rule-3">Use rock, paper, scissors to settle minor decisions or simply play to pass the time</p>
-               <span>+</span> <p class="rule rule-4">If both players lay down the same hand, each player lays down another hand</p>
+                <span>+</span>
+                <p class="rule rule-1">Rock beats scissors, scissors beat paper, and paper beats rock.</p>
+                <span>+</span>
+                <p class="rule rule-2"> Agree ahead of time whether you’ll count off “rock, paper, scissors, shoot” or
+                    just “rock, paper, scissors.”</p>
+                <span>+</span>
+                <p class="rule rule-3">Use rock, paper, scissors to settle minor decisions or simply play to pass the
+                    time</p>
+                <span>+</span>
+                <p class="rule rule-4">If both players lay down the same hand, each player lays down another hand</p>
             </div>
-         </div>
+        </div>
     </main>
     <script src="rps-script.js"></script>
 </body>
