added rule modal

--- a/Module1/Project/Rock_Paper_Scissor/main.html
+++ b/Module1/Project/Rock_Paper_Scissor/main.html
@@ -18,19 +18,20 @@
                     <p>SCISSORS</p>
                 </div>
                 <div class="score-cards">
-                    <p id="score-cards-1">
+                    <p class="score">
                         <span>COMPUTER </span>
                         <span>SCORE</span>
-                        <span class="score computer-score">0</span>
+                        <span class="computer-score">0</span>
                     </p>
-                    <p id="score-cards-2">
+                    <p class="score">
                         <span>YOUR</span>
                         <span>SCORE</span>
-                        <span class="score your-score">0</span>
+                        <span class="your-score">0</span>
                     </p>
                 </div>
             </div>
         </div>
+
         <!-- ICON -->
         <div class="icons">
             <div class="icons-container">
@@ -45,23 +46,25 @@
             </div>
         </div>
         <!-- RULES -->
-        <div class="rule-btn-container">
-            <button id="rule-btn">RULES</button>
-        </div>
         <div class="rule-container">
-            <h1 class="rule-title">Game Rules</h1>
-            <div class="close-container"><img id="close-btn" src="images/close.png" alt="close"></div>
-            <div class="rule-point">
-                <span>+</span>
-                <p class="rule rule-1">Rock beats scissors, scissors beat paper, and paper beats rock.</p>
-                <span>+</span>
-                <p class="rule rule-2"> Agree ahead of time whether you’ll count off “rock, paper, scissors, shoot” or
-                    just “rock, paper, scissors.”</p>
-                <span>+</span>
-                <p class="rule rule-3">Use rock, paper, scissors to settle minor decisions or simply play to pass the
-                    time</p>
-                <span>+</span>
-                <p class="rule rule-4">If both players lay down the same hand, each player lays down another hand</p>
+            <div class="rule-btn-container">
+                <button id="rule-btn">RULES</button>
+            </div>
+            <div class="rule-book-container">
+                <h1 class="rule-title">Game Rules</h1>
+                <div class="close-btn-container"><img id="close-btn" src="images/close.png" alt="close"></div>
+                <div class="rule-book">
+                    <span>+</span>
+                    <p>Rock beats scissors, scissors beat paper, and paper beats rock.</p>
+                    <span>+</span>
+                    <p> Agree ahead of time whether you’ll count off “rock, paper, scissors, shoot” or
+                        just “rock, paper, scissors.”</p>
+                    <span>+</span>
+                    <p>Use rock, paper, scissors to settle minor decisions or simply play to pass the
+                        time</p>
+                    <span>+</span>
+                    <p>If both players lay down the same hand, each player lays down another hand</p>
+                </div>
             </div>
         </div>
     </main>
