updated generated number logic

--- a/Module1/Project/Rock_Paper_Scissor/main.html
+++ b/Module1/Project/Rock_Paper_Scissor/main.html
@@ -36,23 +36,26 @@
         <div class="icons">
             <div class="icons-container">
                 <div class="icons-container-1">
-                    <img id="stone" src="images/stone.png" alt="stone">
-                    <img id="scissor" src="images/scissor.png" alt="scissor">
+                    <div class="move-container stone one"><img class="stone-img" src="images/move-1.png" alt="stone"></div>
+                    <div class="move-container scissor three"><img class="scissor-img" src="images/move-3.png" alt="scissor"></div>
+                    <!-- <img class="stone" src="images/move-1.png" alt="stone"> -->
+                    <!-- <img class="scissor" src="images/move-3.png" alt="scissor"> -->
                 </div>
                 <span class="line line-1"></span>
                 <span class="line line-2"></span>
                 <span class="line line-3"></span>
-                <img id="paper" src="images/paper.png" alt="paper">
+                <div class="move-container paper two"><img class="paper-img" src="images/move-2.png" alt="paper"></div>
+                <!-- <img class="paper" src="images/move-2.png" alt="paper"> -->
             </div>
         </div>
         <!-- RULES -->
         <div class="rule-container">
             <div class="rule-btn-container">
-                <button id="rule-btn">RULES</button>
+                <button class="rule-btn">RULES</button>
             </div>
-            <div class="rule-book-container">
+            <div class="rule-book-container hidden">
                 <h1 class="rule-title">Game Rules</h1>
-                <div class="close-btn-container"><img id="close-btn" src="images/close.png" alt="close"></div>
+                <button class="rule-close-btn-container"><img class="close-btn" src="images/close.png" alt="close"></button>
                 <div class="rule-book">
                     <span>+</span>
                     <p>Rock beats scissors, scissors beat paper, and paper beats rock.</p>
@@ -67,8 +70,22 @@
                 </div>
             </div>
         </div>
+
+        <!-- You WIN against PC -->
+         <div class="win-container hidden">
+            <div class="you-win ">
+                <div class="move-container stone"><img class="ston" src="images/move-1.png" alt="stone"></div>
+                <p class="you-win-text">
+                    <!-- <h1>YOU WIN</h1> -->
+                    <span class="you-win-text-line-1">YOU WIN</span>
+                    <span class="you-win-text-line-2">AGAINST PC</span>
+                    <button class="play-again-btn">PLAY AGAIN</button>
+                </p>
+                <div class="move-container computer-container"><img class="computer-move ston" src="images/move-1.png" alt="stone"></div>
+            </div>
+        </div>
     </main>
     <script src="rps-script.js"></script>
 </body>
 
-</html>
+</html> 
