updated score logic

--- a/Module1/Project/Rock_Paper_Scissor/main.html
+++ b/Module1/Project/Rock_Paper_Scissor/main.html
@@ -72,7 +72,7 @@
         </div>
 
         <!-- You WIN against PC -->
-        <div class="win-container hidden">
+        <div class="win-container r">
             <div class="you-win ">
                 <div class="picked">
                     <span>YOU PICKED</span>
