--- a/Module1/Project/Rock_Paper_Scissor/main.html
+++ b/Module1/Project/Rock_Paper_Scissor/main.html
@@ -12,7 +12,7 @@
         <!-- TITLE -->
         <div class="title">
             <div class="title-container">
-                <div id="title">
+                <div class="title-name">
                     <p>ROCK</p>
                     <p>PAPER</p>
                     <p>SCISSORS</p>
@@ -36,21 +36,25 @@
         <div class="icons">
             <div class="icons-container">
                 <div class="icons-container-1">
-                    <div class="move-container stone"><img class="move stone-img" src="images/move-1.png" alt="1">
-                    </div>
-                    <div class="move-container scissor"><img class="move scissor-img" src="images/move-3.png"
-                            alt="3"></div>
+                    <button class="move-container rock "><img class="move rock-img" src="images/move-1.png" alt="1">
+                    </button>
+                    <button class="move-container scissor "><img class="move scissor-img" src="images/move-3.png"
+                            alt="3">
+                    </button>
                 </div>
                 <span class="line line-1"></span>
                 <span class="line line-2"></span>
                 <span class="line line-3"></span>
-                <div class="move-container paper"><img class="move paper-img" src="images/move-2.png" alt="2"></div>
+                <button class="move-container paper "><img class="move paper-img" src="images/move-2.png"
+                        alt="2"></button>
             </div>
         </div>
+
         <!-- RULES -->
         <div class="rule-container">
             <div class="rule-btn-container">
                 <button class="rule-btn">RULES</button>
+                <button class="next-btn hidden">NEXT</button>
             </div>
             <div class="rule-book-container hidden">
                 <h1 class="rule-title">Game Rules</h1>
@@ -72,23 +76,50 @@
         </div>
 
         <!-- You WIN against PC -->
-        <div class="win-container r">
-            <div class="you-win ">
+        <div class="win-container hidden">
+            <div class="you-win">
+                <!-- ELLIPSE -->
+                <div class="ellipse hidden">
+                    <div class="ellipse-container">
+                        <div class="layer-1 ">
+                            <div class="layer-2 ">
+                                <div class="layer-3 ">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="picked">
                     <span>YOU PICKED</span>
-                    <p class="move-container your-container"><img class="your-move" src="images/move-1.png" alt="move-image"></p>
+                    <p class="move-container your-container"><img class="your-move" src="images/move-1.png"
+                            alt="move-image"></p>
                 </div>
                 <div class="you-win-text">
-                    <span class="you-win-text-line-1">YOU WIN</span>
-                    <span class="you-win-text-line-2">AGAINST PC</span>
+                    <span class="you-win-text-line-1 win-lost-text-1 hidden">YOU WIN</span>
+                    <span class="you-win-text-line-2 win-lost-text-2 hidden">AGAINST PC</span>
                     <button class="play-again-btn">PLAY AGAIN</button>
+                    <button class="reset-btn hidden">PLAY AGAIN</button>
                 </div>
                 <div class="picked">
                     <span>PC PICKED</span>
-                    <p class="move-container computer-container "><img class="computer-move" src="images/move-1.png" alt="random-image"></p>
+                    <p class="move-container computer-container "><img class="computer-move" src="images/move-1.png"
+                            alt="random-image"></p>
                 </div>
             </div>
         </div>
+
+        <!-- HURRAY CONTAINER -->
+        <div class="hurray hidden">
+            <div class="hurray-container ">
+                <img id="star" src="images/star.png" alt="star">
+                <img id="trophy" src="images/trophy.png" alt="star">
+                <h1>HURRAY!!</h1>
+                <h2>YOU WON THE GAME</h2>
+                <button class="reset-btn hurray-reset-btn">PLAY AGAIN</button>
+            </div>
+        </div>
+
     </main>
     <script src="rps-script.js"></script>
 </body>
