update new folder

--- a/Module1/Project/Rock_Paper_Scissor/index.html
+++ b/Module1/Project/Rock_Paper_Scissor/index.html
@@ -15,14 +15,7 @@
                 <div class="title-name">
                     <p>ROCK</p>
                     <p>PAPER</p>
-                    <p>SCISSORS</p>// == Close & Open Rule Modal ==
-ruleBtn.addEventListener('click', () => {
-  ruleBook.classList.remove('hidden');
-});
-
-closeBtn.addEventListener('click', function () {
-  ruleBook.classList.add('hidden');
-});
+                    <p>SCISSORS</p>
                 </div>
                 <div class="score-cards">
                     <p class="score">
