updated new folders

--- a/Module1/Project/Rock_Paper_Scissor/index.html
+++ b/Module1/Project/Rock_Paper_Scissor/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <main>
+        <div>
+            <p class="greet">ENJOY THE GAME😊</p>
+        </div>
         <!-- TITLE -->
         <div class="title">
             <div class="title-container">
@@ -26,7 +29,7 @@
                     <p class="score">
                         <span>YOUR</span>
                         <span>SCORE</span>
-                        <span class="your-score">0</span>
+                        <span class="your-score">1</span>
                     </p>
                 </div>
             </div>
